use String.formatted over String.format